# build-hotspot-analyzer

./: .clang-tidy  .gitignore  .lychee.toml  .markdownlint-cli2.jsonc  .vale.ini  CMakeLists.txt  CMakePresets.json  README.md  phases.md  vcpkg.json
lsp/: CMakeLists.txt  README.md
lsp/cli/lsp_server/: main.cpp
lsp/headers/bha/lsp/: protocol.hpp  server.hpp  suggestion_manager.hpp  types.hpp  uri.hpp
lsp/ide-integrations/emacs/: bha-lsp.el
lsp/ide-integrations/vscode/: README.md  package-lock.json  package.json
lsp/ide-integrations/vscode/src/: extension.ts
lsp/sources/bha/lsp/: server.cpp  suggestion_manager.cpp
lsp/tests/: lsp_test_client.py  run_fault_injection.py  run_subprojects.py
python/: CMakeLists.txt  bha_bindings.cpp  requirements.txt
python/bha/: .gitignore  __init__.py  types.py  visualization.py
python/tests/: test_bha.py  test_native_bindings.py  test_types.py
resources/: CMakeLists.txt  embed_fonts_in_css.py  generate_resource_header.py  resource_template.hpp.in
resources/templates/: report_body_end.html  report_body_sections.html  report_body_start.html  report_head.html  styles.css  visualization.js
tests/: CMakeLists.txt  build_repos.sh  clean_traces.sh  clone_repos.sh  compare_optimizations.py  lsp_test_client.py  repo_apply_benchmark_root_causes.md  run_bha_cmds.sh  run_forward_decl_subproject.py  run_header_split_subproject.py  run_include_removal_subproject.py  run_move_to_cpp_subproject.py  run_pimpl_consistency_matrix.py  run_pimpl_external_subproject.py  run_pimpl_phase8_gate.py  run_pimpl_subproject.py  run_repo_apply_benchmark.py  run_template_edge_cases.py  run_template_subproject.py  run_tests.sh  run_unity_subproject.py  run_unreal_ux_validation.py
tests/cli/: .gitignore
tests/cli/benchmarks/20260312-055521/: results.json  summary.json  summary.md
tests/fixtures/: sample_clang_trace.json
tests/integration/: test_file_utils_integration.cpp
tests/integration/analysis/: test_full_analysis_workflow.cpp
tests/integration/parser/: test_clang_parser_integration.cpp  test_gcc_parser_integration.cpp  test_msvc_parser_integration.cpp  test_parser_factory_integration.cpp  test_unified_format_integration.cpp
tests/integration/utils/: test_file_utils_integration.cpp
tests/subprojects/suggester_explicit_template/: CMakeLists.txt
tests/subprojects/suggester_explicit_template_existing/: CMakeLists.txt
tests/subprojects/suggester_explicit_template_struct/: CMakeLists.txt
tests/subprojects/suggester_forward_decl/: CMakeLists.txt
tests/subprojects/suggester_header_split/: CMakeLists.txt
tests/subprojects/suggester_headers/: CMakeLists.txt  pch.h
tests/subprojects/suggester_include_removal/: CMakeLists.txt
tests/subprojects/suggester_move_to_cpp/: CMakeLists.txt
tests/subprojects/suggester_pimpl/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_copyable/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_explicit_copy/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_inheritance/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_inheritance_nontrivial/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_inline_private/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_macro_decl/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_multiline/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_template/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_template_copydeclared/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_template_multiline_decl/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_template_multitype/: CMakeLists.txt
tests/subprojects/suggester_pimpl_external_template_safe/: CMakeLists.txt
tests/subprojects/suggester_templates/: CMakeLists.txt
tests/subprojects/suggester_unity/: CMakeLists.txt
tests/unit/analysis/: test_analysis_engine.cpp  test_dependency_analyzer.cpp  test_hotspot_analyzer.cpp  test_impact_analyzer.cpp  test_pch_analyzer.cpp  test_template_analyzer.cpp
tests/unit/analyzers/: test_dependency_analyzer.cpp  test_file_analyzer.cpp  test_pch_analyzer.cpp  test_performance_analyzer.cpp  test_symbol_analyzer.cpp  test_template_analyzer.cpp
tests/unit/build_systems/: test_adapter.cpp  test_build_adapter_factory.cpp  test_cmake_adapter.cpp  test_make_adapter.cpp  test_msbuild_adapter.cpp  test_ninja_adapter.cpp
tests/unit/core/: test_config.cpp  test_error.cpp  test_result.cpp  test_types.cpp
tests/unit/export/: test_csv_exporter.cpp  test_exporter_factory.cpp  test_html_exporter.cpp  test_json_exporter.cpp  test_markdown_exporter.cpp  test_report_generator.cpp  test_text_exporter.cpp
tests/unit/exporters/: test_exporter.cpp
tests/unit/git/: test_git_integration.cpp
tests/unit/graph/: test_compressed_graph.cpp  test_graph.cpp  test_graph_algorithms.cpp  test_graph_builder.cpp
tests/unit/lsp/: test_suggestion_manager.cpp
tests/unit/parser/: test_clang_parser.cpp  test_gcc_parser.cpp  test_msvc_parser.cpp  test_parser.cpp  test_unified_format.cpp
tests/unit/parsers/: test_clang_parser.cpp  test_gcc_parser.cpp  test_intel_parser.cpp  test_memory_parser.cpp  test_msvc_parser.cpp  test_nvcc_parser.cpp
tests/unit/security/: test_anonymizer.cpp  test_input_validator.cpp  test_resource_limiter.cpp
tests/unit/storage/: test_database.cpp  test_sqlite_backend.cpp  test_storage_compare.cpp
tests/unit/suggestions/: test_confidence_calculator.cpp  test_consolidator.cpp  test_explainability.cpp  test_forward_decl_suggester.cpp  test_header_split_suggester.cpp  test_header_splitter.cpp  test_include_suggester.cpp  test_pch_optimizer.cpp  test_pch_suggester.cpp  test_pimpl_eligibility.cpp  test_pimpl_suggester.cpp  test_project_root.cpp  test_suggester_catalog.cpp  test_suggestion_engine.cpp  test_template_suggester.cpp  test_unity_build_suggester.cpp  test_unreal_mode.cpp
tests/unit/utils/: test_file_utils.cpp  test_hash_utils.cpp  test_json_utils.cpp  test_path_utils.cpp  test_string_utils.cpp
(+10204 files in other folders)
